--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Оглавление</h1>
      <ul>
-       <li><a href="file:///F:/Web%202%20%D0%BA%D1%83%D1%80%D1%81/%D0%9B%D0%B0%D0%B1%D0%B0%2019/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%201.html">Лабораторная работа №19. Задание 1</a></li>
+       <li><a href="Задание 1.html">Лабораторная работа №19. Задание 1</a></li>
      </ul>
   </body>
 </html>
