--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h1>Оглавление</h1>
      <ul>
        <li><a href="Задание 1.html">Лабораторная работа №19. Задание 1</a></li>
+       <li><a href="Задание 2.html">Лабораторная работа №19. Задание 2</a></li>
+       <li><a href="Задание 3.html">Лабораторная работа №19. Задание 3</a></li>
+       <li><a href="Задание 4.html">Лабораторная работа №19. Задание 4</a></li>
      </ul>
   </body>
 </html>
