--- a/Задание 3.html
+++ b/Задание 3.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="css/style2.css">
   </head>
   <body>
-    <h1>Массив состоит из трех элементов, имеющих разный тип данных. Выведится на экран первый и второй элементы массива. Третий элемент массива заменяется, после чего выведится его значение на экран. Затем добавляется в массив начальный и конечный элементы при помощи специальных методов. Выведятся все элементы массива на экран, после чего подсчитывается его окончательная длинна.</h1>
+    <h1>Массив состоит из трех элементов, имеющих разный тип данных. Выводится на экран первый и второй элементы массива. Третий элемент массива заменяется, после чего выведится его значение на экран. Затем добавляется в массив начальный и конечный элементы при помощи специальных методов. Выведятся все элементы массива на экран, после чего подсчитывается его окончательная длинна.</h1>
       <img src="Животные.jpg" width="800" height="auto" alt="Животные">
     <script>
       let mas=['Кот', false , function() { alert('привет, Студент!'); }];
