--- a/Задание 4.html
+++ b/Задание 4.html
@@ -3,20 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Задание 4</title>
-     <link rel="stylesheet" href="css/style3.css">
+     <link rel="stylesheet" href="css/style214.css">
   </head>
   <body>
-     <h1>Дан следующий текст: «Every <i>man</i> in the world! Every <i>woman</i> on earth!»</h1>
-      <h2>Замените слова «man» и «woman» на «person» при помощи методов регулярных выражений replace и compile.</h2> 
-     <script>
-           var str="Every man in the world! Every woman on earth!";
-           document.write(str+"<br>");
-           var patt=/man/g;
-           var str2=str.replace(patt,"person");
-           patt=/(wo)?man/g;
-           patt.compile(patt);
-           str2=str.replace(patt,"person");
-           document.write(str2);
-       </script>
+   <div class="box">
+    <h1>Индивидуальный гороскоп</h1>
+     <h3>Гороскоп личности, анализ натальной карты</h3>
+      <p>Гороскоп личности – это Ваш <b>индивидуальный</b> астрологический портрет, созданный на основе анализа астрологических феноменов, обуславливающих характер человека, его наклонности, способности, его слабые и сильные стороны. </p>
+       <p>Индивидуальный гороскоп личности показывает также основные тенденции и предрасположенности, которые будут проявляться в процессе жизни. И что особенно важно, персональный гороскоп показывает нам наши возможности и инструменты, с помощью которых мы можем стать более успешными, счастливыми и гармоничными. Этот сервис является демонстрацией того, как астрология для вас может стать эффективным инструментом самопознания.</p>
+        <p>Расчет индивидуального гороскопа по введенным дате и времени рождения - это определение положения Солнца, Луны и 8 планет в натальной карте на время Вашего рождения. По полученным координатам определяется знаки Зодиака и дома гороскопа для каждого небесного тела, а также положение планет друг относительно друга (расчет аспектов). Эти факторы оказывают влияние на Ваш характер, способности и судьбу. Объяснение этих воздействий Вы и найдете на полученных страницах. Предлагаемые интерпретации сделаны на основе работ известных астрологов.</p>
+        <center>
+         <img src="зн.gif" height="auto" width="300" alt="Звёздное небо">
+       </center>
+         <h1>Что вы получите в результате расчета?</h1>
+         <ul>
+           <li>Натальная карта.
+             <p>Натальная карта - основной рабочий инструмент астролога - схема, на которой изображаются все элементы, которые анализируются: знаки Зодиака, дома (поля), планеты и аспекты между планетами. Дома считаются по системе Коха. В расчетах Северного Лунного Узла используется его среднее значение. Справа от карты приводятся все расчетные данные: положение планет в знаках и домах и номера домов, которыми они управляют, положения вершин (куспидов) домов в знаках и планеты, которые ими управляют. Если вы интересуетесь астрологией только с практической целью - получить необходимую вам информацию, можете переходить сразу ко 2-му разделу.</p></li>
+           <li>Основные особенности личности.
+             <p>Сначала мы определяем качества и естественные характеристики, которые изначально присутствуют и заложены с рождения. Они определяются положением планет в знаках и проявляются уже в детском возрасте. Затем мы анализируем, как и где естественные качества личности будут проявляться и реализовываться в жизни, какие ее сферы будут наиболее необходимы и интересны. Это определяется положением планет в домах гороскопа, и здесь точное время и место рождения особенно важно для расчета. И наконец, наверное, самое важное - это понять, есть ли в гороскопе энергии и какие, которые не только определяют основные тенденции характера, занятий, обстоятельств, направление всей жизни человека, но и могут помочь или помешать ему достичь максимальной реализации. Это могут быть власть, богатство, но и вершины искусства, науки, духа. Это во многом зависит именно от той энергии, которая будет преобладающей в гороскопе. Для этого мы различными способами анализируем непосредственно планеты, их силу и значимость.</p></li>
+           <li>Астропсихологические характеристики
+              <p>Если вы внимательно изучите материалы предыдущего раздела, то основные черты и характеристики личности будут вам уже известны. В этом разделе информация представлена и сгруппирована по всем планетам-факторам, символизирующим различные психологические составляющие.</p></li>
+           <li>Сферы реализации и обстоятельства жизни
+              <p>В этом разделе мы рассматриваем гороскоп и практически те же самые факторы, но под другим углом, с более практической точки зрения, а именно, как сложится обстоятельства и жизнь в конкретных сферах: здоровье, финансы, семья, дети и т.д. Для этого мы исследуем гороскоп в структуре его домов (полей), каждый из которых символизирует и как бы "отвечает" за определенные области жизни. Знаки, в которые попадают дома, символизируют фоновые свойства и качества, характеризующие обстоятельства дома. Планеты, попадающие в дом, приносят свою энергию и непосредственно влияют на данную сферу жизни, а положение планет-управителей дома показывает, какие другие сферы жизни и ваши действия или бездействие в них определяют ситуацию анализируемого дома.</p></li>
+         </ul>
+         <p color>Для начала разработки вашего гороскопа, пожалуйста, обозначьте себя. Введите своё ФИО для дальнейшей работы.</p>
+          <center>
+           <FORM METHOD=post NAME="form" ACTION="JavaScript:form.e.value='Нажали кнопку: Заполнить';void(0);">
+             <INPUT TYPE=text NAME=e SIZE=30 VALUE=""><BR>
+              <INPUT TYPE=submit VALUE="Заполнить">
+                <INPUT TYPE=reset VALUE="Очистить">
+           </FORM>
+          </center>
+    </div>
   </body>
 </html>
