--- a/Задание 3.html
+++ b/Задание 3.html
@@ -3,22 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Задание 3</title>
-     <link rel="stylesheet" href="css/style2.css">
+     <link rel="stylesheet" href="css/style213.css">
   </head>
   <body>
-    <h1>Массив состоит из трех элементов, имеющих разный тип данных. Выводится на экран первый и второй элементы массива. Третий элемент массива заменяется, после чего выведится его значение на экран. Затем добавляется в массив начальный и конечный элементы при помощи специальных методов. Выведятся все элементы массива на экран, после чего подсчитывается его окончательная длинна.</h1>
-      <img src="Животные.jpg" width="800" height="auto" alt="Животные">
-    <script>
-      let mas=['Кот', false , function() { alert('привет, Студент!'); }];
-       alert( mas[0] );
-       alert( mas[1] );
-       alert(mas.pop());
-      mas.push("Собака");
-       alert( mas[2] );
-       mas.push("Кролик");
-       mas.push("Попугай");
-       alert(mas);
-       alert(mas.length );
-   </script>
+    <div class="box">
+    <p>Тем не менее, мы не оставим наших пользователей без поддежки!</p>
+     <p>Пожалуйста, кликните на ссылку ещё раз. Если же у вас возникли трудности и в этот раз, тогда мы приносим наши глубокие извинения Вам,пользователь.</p>
+      <A HREF="JavaScript:alert('Внимание!!!');">Пожалуйста, кликните на данную ссылку!</A>
+       <p>К сожалению, это означает, что искомый вами контент либо поврежден, либо удален из общего доступа. Хорошего Вам дня!</p>
+        <img src="мишки.gif" alt="Мишки с сердечками">
+        <p color>Возможно, Вам будет интересен следующий <a href="file:///F:/Web%202%20%D0%BA%D1%83%D1%80%D1%81/%D0%9B%D0%B0%D0%B1%D0%B0%2021/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%204.html">контент</a></p>
+      </div>
   </body>
 </html>
