--- a/Задание 1.html
+++ b/Задание 1.html
@@ -30,7 +30,7 @@
       <br>
       <input type="button" onclick="hello();" value="Помощь"/><br>
   </form>
-     <a href="file:///F:/Web%202%20%D0%BA%D1%83%D1%80%D1%81/%D0%9B%D0%B0%D0%B1%D0%B0%2021/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%202.html">Техническая поддержка</a>
+     <a href="Задание 2.html">Техническая поддержка</a>
     </center>
    </div>
   </body>
