--- a/Задание 2.html
+++ b/Задание 2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Задание 2</title>
-     <link rel="stylesheet" href="css/style212.css">
+     <link rel="stylesheet" href="css/Style212.css">
      <script language="JavaScript" type="text/JavaScript">
      function game() {
      var id;
