--- a/Задание 1.html
+++ b/Задание 1.html
@@ -30,7 +30,7 @@
       <br>
       <input type="button" onclick="hello();" value="Помощь"/><br>
   </form>
-     <a href="https://anastasiya-13.github.io/%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%202.html">Техническая поддержка</a>
+     <a href="Задание%202.html">Техническая поддержка</a>
     </center>
    </div>
   </body>
