--- a/Задание 3.html
+++ b/Задание 3.html
@@ -12,7 +12,7 @@
       <A HREF="JavaScript:alert('Внимание!!!');">Пожалуйста, кликните на данную ссылку!</A>
        <p>К сожалению, это означает, что искомый вами контент либо поврежден, либо удален из общего доступа. Хорошего Вам дня!</p>
         <img src="мишки.gif" alt="Мишки с сердечками">
-        <p color>Возможно, Вам будет интересен следующий <a href="file:///F:/Web%202%20%D0%BA%D1%83%D1%80%D1%81/%D0%9B%D0%B0%D0%B1%D0%B0%2021/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%204.html">контент</a></p>
+        <p color>Возможно, Вам будет интересен следующий <a href="Задание%204.html">контент</a></p>
       </div>
   </body>
 </html>
