--- a/Задание 4.html
+++ b/Задание 4.html
@@ -34,6 +34,7 @@
                 <INPUT TYPE=reset VALUE="Очистить">
            </FORM>
           </center>
+               <a href="Задание%205.html">Если у вас есть свободное время, пожалуйста, пройдите нашу анкету!)</a>
     </div>
   </body>
 </html>
