--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
       <li><a href="Задание 6.html">Лабораторная работа №21. Задание 6</a></li>
       <li><a href="Задание 7.html">Лабораторная работа №21. Задание 7</a></li>
     </ul>
+    <ul>
+      <li><a href="Задание 251.html">Лабораторная работа №25. Задание 1</li>
+      <li><a href="Задание 252.html">Лабораторная работа №25. Задание 2</a></li>
+    </ul>
   </body>
 </html>
