--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <ul>
       <li><a href="Задание 251.html">Лабораторная работа №25. Задание 1</li>
       <li><a href="Задание252.html">Лабораторная работа №25. Задание 2</a></li>
+      <li><a href="Задание253.html">Лабораторная работа №25. Задание 3</a></li>
     </ul>
   </body>
 </html>
