--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <li><a href="Задание 251.html">Лабораторная работа №25. Задание 1</li>
       <li><a href="Задание252.html">Лабораторная работа №25. Задание 2</a></li>
       <li><a href="index1.html">Лабораторная работа №25. Задание 3</a></li>
+      <li><a href="top.html">Лабораторная работа №25.top</a></li>
+      <li><a href="button.html">Лабораторная работа №25.button</a></li>
     </ul>
   </body>
 </html>
