--- a/index1.html
+++ b/index1.html
@@ -37,8 +37,8 @@
   </head>
   <body>
 <frameset rows="25%, 75%">
-<frame name="top" src="top.html">
-<frame name="bottom" src="buttom.html">
+<frame name="top" src="https://anastasiya-13.github.io/top.html">
+<frame name="bottom" src="https://anastasiya-13.github.io/button.html">
 </frameset>
   </body>
 </html>
