--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
   <body>
 <frameset rows="25%, 75%">
 <frame name="top" src="https://anastasiya-13.github.io/top.html">
-<frame name="bottom" src="https://anastasiya-13.github.io/button.html">
+<frame name="buttom" src="https://anastasiya-13.github.io/button.html">
 </frameset>
   </body>
 </html>
