--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@
      </script>
   </head>
 <frameset rows="25%, 75%">
-<frame name="top" src="https://anastasiya-13.github.io/top.html">
-<frame name="buttom" src="https://anastasiya-13.github.io/button.html">
+<frame src="top.html">
+<frame  src="button.html">
 </frameset>
 </html>
