--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
       <li><a href="top.html">Лабораторная работа №25.top</a></li>
       <li><a href="button.html">Лабораторная работа №25.button</a></li>
     </ul>
+    <ul>
+     <li><a href="Задание 221.html">Лабораторная работа №22. Задание 1</li>
+      <li><a href="Задание 222.html">Лабораторная работа №22. Задание 2</a></li>
+      <li><a href="Задание 224.html">Лабораторная работа №22. Задание 4</a></li>
+      <li><a href="Задание 225.html">Лабораторная работа №22. Задание 5</a></li>  
+    </ul>
   </body>
 </html>
