--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
       <li><a href="Задание 223.html">Лабораторная работа №22. Задание 3</a></li>
       <li><a href="Задание 224.html">Лабораторная работа №22. Задание 4</a></li>  
     </ul>
+       <ul>
+     <li><a href="Задание 261.html">Лабораторная работа №26. Задание 1</li>
+      <li><a href="Задание 262.html">Лабораторная работа №26. Задание 2</a></li>
+      <li><a href="Задание 263.html">Лабораторная работа №26. Задание 3</a></li>  
+    </ul>
   </body>
 </html>
