--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
       <li><a href="Задание 262.html">Лабораторная работа №26. Задание 2</a></li>
       <li><a href="Задание 263.html">Лабораторная работа №26. Задание 3</a></li>  
     </ul>
+       <ul>
+     <li><a href="Задание 271.html">Лабораторная работа №27. Задание 1</li>
+      <li><a href="Задание 272.html">Лабораторная работа №27. Задание 2</a></li>
+      <li><a href="Задание 273.html">Лабораторная работа №27. Задание 3</a></li>  
+    </ul>
   </body>
 </html>
