--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
       <li><a href="Задание 272.html">Лабораторная работа №27. Задание 2</a></li>
       <li><a href="Задание 273.html">Лабораторная работа №27. Задание 3</a></li>  
     </ul>
+       <ul>
+      <li><a href="Задание 281.html">Лабораторная работа №28. Задание 1</li>
+      <li><a href="Задание 282.html">Лабораторная работа №28. Задание 2</a></li>
+      <li><a href="Задание 283.html">Лабораторная работа №28. Задание 3</a></li>
+      <li><a href="Задание 284.html">Лабораторная работа №28. Задание 4</a></li>
+    </ul>
   </body>
 </html>
